Issue #15578: Correctly incref the parent module while importing.